# karRubik

./: .gitignore  CMakeLists.txt  README.md
src/: Cube.cpp  Cube.h  Gui.cpp  Gui.h  Parser.cpp  Parser.h  enums.h  main.cpp  todo.txt
